@@ -1,4 +1,5 @@
-title: "Koordinatfesting: Karplanter fra Telemark"
+title: "Kartfesting: Karplanter fra Telemark"
+image: geografi.jpg
 description: ""
 georeference: true
 template: georeference
@@ -9,7 +10,7 @@ prefilters:
     total: "SELECT count(*) as total where county = ?"
     complete: "SELECT count(*) as total where completed > 2 and county = ?"
 help:
-  introduction: Bruk informasjonen i lokalitetsfeltet for å forbedre kartfestingen av innsamlingen. Du kan kartfeste innsamlingen som en linje, et polygon eller en sirkel. Hvis det ser ut som det ikke er mulig å forbedre kartfestingen eller hvis lokalitetsbeskrivelsen er mindre nøyaktig enn koordinatene som er satt huker du av for å "Godta eksisterende kartfesting"
+  introduction: Bruk informasjonen i lokalitetsfeltet for å forbedre kartfestingen av innsamlingen. Du kan kartfeste innsamlingen som rektangel, som polygon eller som en sirkel (punkt med usikkerhet). Hvis det ser ut som det ikke er mulig å forbedre kartfestingen eller hvis lokalitetsbeskrivelsen er mindre nøyaktig enn koordinatene som er satt huker du av for å "Godta eksisterende kartfesting"
   subprojects: telemark-subprojects
 source:
   database: projects.db
