@@ -2,8 +2,8 @@ $def with (content)
 <!doctype html>
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <title>Dugnad</title>
-<link rel='stylesheet' href='$config['base']/css/dugnad.css'>
-<script src='$config['base']/js/info.js'></script>
+<link rel='stylesheet' href='$config['base']/css/dugnad.css?2'>
+<script src='$config['base']/js/info.js?2'></script>
 
 <header>
   <nav>
